--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body class="bg-body-tertiary">
   <nav class="navbar bg-primary navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PVC Service Status Page</a>
+      <a class="navbar-brand" href="#"><img width="30" height="30" class="d-inline-block align-text-top" src="/pvc-favicon.png"> PVC Service Status Page</a>
       <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
